# QuickShare

./: .gitignore  Cargo.toml  README.md  README_zh.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: alias.rs  crypto.rs  discovery.rs  lib.rs  protocol.rs  transfer.rs
gui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
gui/src/: App.jsx  index.css  main.jsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: context_menu.rs  main.rs  single_instance.rs
gui/src/components/: ContextMenuDemo.jsx
gui/src/hooks/: useContextMenu.js  useWebSocket.js
gui/src/i18n/: en.js  index.jsx  zh.js
server/: Cargo.toml
server/src/: handler.rs  lib.rs  state.rs  ws.rs
