[package]
name = "quickshare-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quickshare"
path = "src/main.rs"

[dependencies]
quickshare-core = { path = "../core" }
quickshare-server = { path = "../server" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
tokio-tungstenite = "0.24"
futures-util = "0.3"
