[package]
name = "quickshare-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
mdns-sd = "0.12"
local-ip-address = "0.6"
sha2 = "0.10"
whoami = "1"
rand = "0.8"
