[package]
name = "quickshare-gui"
version = "0.3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
quickshare-core = { path = "../../core" }
quickshare-server = { path = "../../server" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-autostart = "2.5"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
opener = "0.7"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
dirs = "5"
